Massive rework for the talk

--- a/presentations/react-components/index.html
+++ b/presentations/react-components/index.html
@@ -49,26 +49,33 @@
         <section>
           <h2>Key Points</h2>
           <ul>
-            <li>What is the component</li>
-            <li>Why to use the components</li>
-            <li>Component types</li>
-            <li>How to pass data into the component</li>
-            <li>How to get data from the component</li>
-            <li>Why TypeScript</li>
+            <li class="fragment fade-up">What is the component</li>
+            <li class="fragment fade-up">Why to use the components</li>
+            <li class="fragment fade-up">Component types</li>
+            <li class="fragment fade-up">How to pass data into the component</li>
+            <li class="fragment fade-up">How to get data from the component</li>
+            <li class="fragment fade-up">Component lifecycle</li>
           </ul>
         </section>
 
         <include src="./react-components/body.html"></include>
 
 
+        <section>
+          <h2>Home task</h2>
+          <ul>
+            <li>Split your APP into the logical components</li>
+            <li>Mix Class Based and Functional approach to get more practice in both</li>
+            <li>Use props only to pass the data to your components</li>
+          </ul>
+        </section>
         
         <section>
           <h2>Useful links</h2>
           <ul>
-            <li><a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/introducing-jsx.html">What is JSX</a></li>
-            <li><a target="_blank" rel="noreferrer noopener" href="https://www.telerik.com/blogs/how-jsx-react-works-under-hood">JSX under the hood</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://reactjs.org/docs/react-component.html">Documentation</a></li>
             <li><a target="_blank" rel="noreferrer noopener" href="https://medium.com/@thejasonfile/dumb-components-and-smart-components-e7b33a698d43">Smart VS Dumb components</a></li>
-            <li><a target="_blank" rel="noreferrer noopener" href="https://www.typescriptlang.org/">TypeScript</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://www.freecodecamp.org/news/how-to-understand-a-components-lifecycle-methods-in-reactjs-e1a609840630">Component LifeCycle</a></li>
           </ul>
         </section>
       </div>
