Takeaways for the react component stalk

--- a/presentations/react-components/index.html
+++ b/presentations/react-components/index.html
@@ -60,6 +60,15 @@
 
         <include src="./react-components/body.html"></include>
 
+        <section>
+          <h2>Takeaway</h2>
+          <ul >
+            <li class="fragment fade-up">Component - an independent unit of code that encapsulate single, logical functionality</li>
+            <li class="fragment fade-up">Components might be class based or functional</li>
+            <li class="fragment fade-up">Components divided into "smart" and "dumb"</li>
+            <li class="fragment fade-up">Components have lifecycle you can hook into</li>
+          </ul>
+        </section>
 
         <section>
           <h2>Home task</h2>
