A bit of polishing of the talk about the hooks

--- a/presentations/react-hooks/body.html
+++ b/presentations/react-hooks/body.html
@@ -4,7 +4,16 @@
   </section>
 
   <section>
-    <h3>Hook - an extension to functional components</h3>
+    <h3>Hook as is just a function, that</h3>
+
+    <ul>
+      <li>Starts with use</li>
+      <li>Lives only inside functional component or other hooks</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Hooks extends functional components functionality</h3>
 
     <p class="left">
       Hooks allows you to have state, hook into lifecycle, share functionality
@@ -24,7 +33,6 @@
       <li>Very nice way to share common logic</li>
     </ul>
   </section>
-
 
   <section>
     <h3>Cons</h3>
