--- a/presentations/react-components/body.html
+++ b/presentations/react-components/body.html
@@ -402,7 +402,7 @@ const Btn: FC&lt;BtnProps&gt; = (props) => (
   </section>
 
   <section>
-    <h3>Don't do common mistake: </h3>
+    <h3>Common mistake: </h3>
 
     <pre>
       <code data-line-numbers="1-5|4">import { FC } from "react";
@@ -416,6 +416,45 @@ const Btn: FC&lt;BtnProps&gt; = (props) => (
   <section class="left">
     <strong>⚠️Important: </strong> Using anonymous functions as a callback might heart the performance
   </section>
+</section>
+
+<section>
+  <section><h3>Let's combine it all together</h3></section>
+
+  <section>
+    <h3>Create presentation component AppButton</h3>
+
+    <pre><code class="language-tsx" data-line-numbers>type BtnProps = { text: string; onClick: () =&gt; void };
+      const AppBtn: FC&lt;BtnProps&gt; = ({ text, onClick }) =&gt; (
+        &lt;button className="btn btn-prime" type="button" onClick={onClick}&gt;
+          {text}
+        &lt;/button&gt;
+      );
+      </code></pre>
+  </section>
+
+  <section>
+    <h3>Create smart component App</h3>
+
+    <pre><code class="language-tsx" data-line-numbers>const App = () =&gt; {
+      const [counter, setCounter] = useState(0);
+      return (
+        &lt;&gt;
+          &lt;h1&gt;Counter: {counter} times&lt;/h1&gt;
+          &lt;AppBtn onClick={() =&gt; setCounter(counter + 1)} text="Click me" /&gt;
+        &lt;/&gt;
+      );
+    };</code></pre>
+  </section>
+
+  <section>
+    <h3>Note</h3>
+    <ul>
+      <li>AppBtn can be used all over the project</li>
+      <li>App doesn't care about the way click will be emitted</li>
+    </ul>
+  </section>
+
 </section>
 
 <section>
@@ -456,10 +495,11 @@ const Btn: FC&lt;BtnProps&gt; = (props) => (
   </section>
 
   <section>
-    <h3>What about others???</h3>
+    <h3>What about others?</h3>
 
-    <p class="left">Other hooks are either deprecated like componentWillMount either beyond this course for beginners
-      like useLayoutEffect</p>
+    <p class="left">Other lifecycle events are either deprecated like componentWillMount either beyond this course for
+      beginners
+      like useLayoutEffect or getSnapshotBeforeUpdate</p>
   </section>
 
   <section>
