Added link to the demo repo

--- a/presentations/react-hooks/body.html
+++ b/presentations/react-hooks/body.html
@@ -48,10 +48,6 @@
   </section>
 
   <section>
-    <h3>Use only inside functional component</h3>
-  </section>
-
-  <section>
     <h3>Name hook with use</h3>
 
     <ul>
@@ -66,8 +62,12 @@
         useWhatEverYouWant()
       </li>
     </ul>
-
   </section>
+
+  <section>
+    <h3>Use only inside functional component or other hook</h3>
+  </section>
+
   <section>
     <h3>Don't use conditionally or in loops</h3>
     <p class="left">React relays on the order of hook invocations</p>
