--- a/presentations/react-styling/index.html
+++ b/presentations/react-styling/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React For Beginners - Styling in React - from plain CSS to CSS in JS</title>
-    <meta name="description" content="Free learning course - React: Styling in React - from plain CSS to CSS in JS" />
+    <title>React For Beginners - React - from plain CSS to CSSinJS</title>
+    <meta name="description" content="Free learning course - React: React - from plain CSS to CSSinJS" />
     <meta name="keywords" content="react free learning course beginners" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="React For Beginners - Styling in React - from plain CSS to CSS in JS" />
+    <meta name="twitter:title" content="React For Beginners - React - from plain CSS to CSSinJS" />
     <meta
       name="twitter:site"
       content="https://github.com/Drag13/react-learning-course-short/react-styling/index.html"
@@ -17,11 +17,11 @@
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
-    <meta property="og:title" content="React For Beginners - Styling in React - from plain CSS to CSS in JS" />
-    <meta name="og:site_name" content="React For Beginners - Styling in React - from plain CSS to CSS in JS" />
+    <meta property="og:title" content="React For Beginners - React - from plain CSS to CSSinJS" />
+    <meta name="og:site_name" content="React For Beginners - React - from plain CSS to CSSinJS" />
     <meta property="og:url" content="https://drag13.io/react-learning-course-short/react-styling/index.htnl" />
     <meta property="og:type" content="website" />
-    <meta name="application-name" content="React For Beginners - Styling in React - from plain CSS to CSS in JS" />
+    <meta name="application-name" content="React For Beginners - React - from plain CSS to CSSinJS" />
     <meta name="author" content="drag13" />
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
@@ -40,7 +40,7 @@
         </section>
 
         <section>
-          <h1>L4 - Styling in React - from plain CSS to CSS in JS</h1>
+          <h1>L5 - React - from plain CSS to CSSinJS</h1>
           <h4>
             <u> React For Beginners by Itera </u>
           </h4>
@@ -49,10 +49,10 @@
         <section>
           <h2>Key Points</h2>
           <ul>
-            <li>Default way</li>
-            <li>Using CSS modules</li>
-            <li>Preprocessors</li>
-            <li>CSS in JS</li>
+            <li class="fragment fade-up">Default way</li>
+            <li class="fragment fade-up">Using CSS modules</li>
+            <li class="fragment fade-up">Preprocessors</li>
+            <li class="fragment fade-up">CSS in JS</li>
           </ul>
         </section>
 
