Added hometask for the talk about css and minor fixes for the presentation

--- a/presentations/react-styling/body.html
+++ b/presentations/react-styling/body.html
@@ -197,8 +197,10 @@ article[role="main"] {
     <section>
         <h3>Example from styled components</h3>
 
-        <pre><code data-line-numbers>const Title = styled.h1`
-    color: palevioletred;
+        <pre><code class="language-tsx" data-line-numbers>import styled from "@emotion/styled";
+
+const AppH1 = styled.h1`
+    color: red;
 `;</code></pre>
     </section>
 
@@ -264,9 +266,11 @@ article[role="main"] {
     <section>
         <h3>Simple</h3>
 
-        <pre><code data-line-numbers="">const AppH1 = styled.h1`
+        <pre><code class="language-tsx" data-line-numbers>import styled from "@emotion/styled";
+
+const AppH1 = styled.h1`
     color: red;
-`;      </code></pre>
+`;</code></pre>
     </section>
 
     <section>
