--- a/presentations/react-styling/index.html
+++ b/presentations/react-styling/index.html
@@ -59,6 +59,12 @@
         <include src="./react-styling/body.html"></include>
 
 
+        <section>
+          <h2>Home task</h2>
+          <ul>
+            <li>Use CSS modules to style previously created application</li>
+          </ul>
+        </section>
         
         <section>
           <h2>Useful links</h2>
