more tweaks for the talk about state management

--- a/presentations/react-state-management/body.html
+++ b/presentations/react-state-management/body.html
@@ -312,13 +312,12 @@ configure({
 
     <section>
         <h2>What to use?</h2>
-    </section>
 
-    <section>
         <ul>
-            <li>Context - the simplest solution</li>
-            <li>MobX - easy to use</li>
-            <li>Redux - most popular and feature rich</li>
+            <li>Context - may be for the tiny projects 🤔</li>
+            <li class="fragment fade-up">MobX - the default one ❤️❤️</li>
+            <li class="fragment fade-up">Redux + Redux Toolkit - in case your team already knows it ❤️</li>
         </ul>
+
     </section>
 </section>
