Added instructions about how to install mobx

--- a/presentations/react-state-management/body.html
+++ b/presentations/react-state-management/body.html
@@ -252,6 +252,12 @@ const L3: FC = () =&gt; {
     </section>
 
     <section>
+        <h3>Install MobX and dependencies</h3>
+
+        <pre><code>npm i mobx mobx-react</code></pre>
+    </section>
+
+    <section>
         <h3>Create a simple class</h3>
         <pre><code data-line-numbers>class UserDetailsStore {
     nationality = "unknown";
@@ -305,6 +311,10 @@ configure({
     observableRequiresReaction: true,
     disableErrorBoundaries: true
 });</code></pre>
+    </section>
+
+    <section>
+        <h3>Better use MobX + Context</h3>
     </section>
 </section>
 
