--- a/presentations/typescript-intro/body.html
+++ b/presentations/typescript-intro/body.html
@@ -1,18 +1,42 @@
 <section>
-  <h3>TypeScript is JavaScript with syntax for types.</h3>
 
-  <p>TypeScript is a strongly typed programming language that builds on JavaScript, giving you better tooling at any
-    scale.</p>
+  <section>
+    <h3>TypeScript is JavaScript with syntax for types.</h3>
+
+    <p>TypeScript is a strongly typed programming language that builds on JavaScript
+      scale <a href="https://www.typescriptlang.org/">(C)</a></p>
+  </section>
+
+
+  <section>
+    <h3>The great thing about TypeScript - it's progressive</h3>
+
+    <p class="left">
+      With tsconfig.json you can have TypeScript whatever strict you want
+    </p>
+
+    <p class="left">TypeScript also able to run JavaScript which enables taking benefits from both</p>
+  </section>
+
 </section>
 
 <section>
-  <h3>Dealing with TypeScript</h3>
 
-  <ul>
-    <li>npm i typescript -D</li>
-    <li>npm i ts-node -D</li>
-    <li>npx ts-node src/index.ts</li>
-  </ul>
+  <section>
+    <h3>Dealing with TypeScript</h3>
+    <ul>
+      <li>npm i typescript -D</li>
+      <li class="fragment fade-up">npm i ts-node -D</li>
+      <li class="fragment fade-up">npx tsc --init</li>
+      <li class="fragment fade-up">npx ts-node src/index.ts</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Tune tsconfig.json for your needs</h3>
+
+    <p>Documentation is <a href="https://www.typescriptlang.org/docs/handbook/tsconfig-json.html">here</a></p>
+  </section>
 </section>
 
 <section>
@@ -30,7 +54,15 @@ const isUserAdmin:boolean = true;  </code></pre>
   </section>
 
   <section>
-    <h3>Defining types for primitives mostly unneeded due to inference</h3>
+    <h3>Sometimes in React</h3>
+    <pre><code class="language-tsx" data-line-numbers="1-3|3">import { FC } from 'react';
+
+const AppHeader: FC = () =&gt; &lt;h1&gt;Who said meow?&lt;/h1&gt;;
+      </code></pre>
+  </section>
+
+  <section>
+    <h3>However, defining types for primitives mostly unneeded due to inference</h3>
     <!-- <img src="" alt=""> -->
   </section>
 </section>
@@ -56,7 +88,15 @@ sum('4', 5);
 
   <section>
     <h3>Typing a function - very and very common approach</h3>
-    <p class="left">Don't forget to user "infer parameters from usage"</p>
+
+    <pre><code class="language-tsx" data-line-numbers>const AppHeader = (props: { txt: string }) =&gt; 
+  &lt;h1&gt;{props.txt}&lt;/h1&gt;;
+    </code></pre>
+  </section>
+
+  <section>
+    <h3>I can do the same with JsDoc!</h3>
+    <p>Using JsDoc you have to sync description with real types. TypeScript will handle this for you</p>
   </section>
 </section>
 
@@ -71,8 +111,7 @@ sum('4', 5);
   <section>
     <h3>Using keyword type</h3>
 
-    <pre><code class="language-typescript">
-type User = { name: string, isAdmin: boolean; }
+    <pre><code class="language-typescript" data-line-numbers="">type User = { name: string, isAdmin: boolean; }
 const user: User = { name: 'Vitalii', isAdmin: false }
     </code></pre>
   </section>
@@ -80,9 +119,8 @@ const user: User = { name: 'Vitalii', isAdmin: false }
   <section>
     <h3>Using keyword interface</h3>
 
-    <pre><code class="language-typescript">
-interface User { name: string, isAdmin: boolean; }
-const user: User = {name: 'Pavlo', isAdmin: true}
+    <pre><code class="language-typescript" data-line-numbers="">interface IUser { name: string, isAdmin: boolean; }
+const user: IUser = {name: 'Pavlo', isAdmin: true}
     </code></pre>
   </section>
 
@@ -98,8 +136,17 @@ const user: User = {name: 'Pavlo', isAdmin: true}
 interface IListUsers { (users: User[]) => void }
 
 const listUsers: ListUsers = (users) => 
-      users.forEach(console.log)
+        users.forEach(console.log)
     </code></pre>
+  </section>
+
+  <section>
+    <h3>Component props - the great example </h3>
+
+    <pre><code class="language-tsx" data-line-numbers>type HeaderProps = { txt: string };
+const AppHeader = (props: HeaderProps) =&gt; 
+  &lt;h1&gt;{props.txt}&lt;/h1&gt;;
+</code></pre>
   </section>
 </section>
 
@@ -127,6 +174,14 @@ const incrementAction: Action&lt;number&gt; = {
   console.log(action.type);
 };
     </code></pre>
+  </section>
+
+  <section>
+    <h3>Simple example from React world</h3>
+    <pre><code class="language-tsx" data-line-numbers>type HeaderProps = PropsWithChildren&lt;{ customClass: string }&gt;;
+const AppHeader = (p: HeaderProps) =&gt; (
+  &lt;h1 className={p.customClass}&gt;{p.children}&lt;/h1&gt;
+);</code></pre>
   </section>
 </section>
 
@@ -166,32 +221,15 @@ const wrongUserRole: UserRole = 'superAdmin'; // FAILS
     <pre><code class="language-typescript" data-line-numbers="">const displayValue = (x: number | string) => `value:${x}`;
     </code></pre>
   </section>
-</section>
-
-<section>
 
   <section>
-    <h3>Utility types</h3>
-    <p class="left">TypeScript has bunch of utility types that helps you with development</p>
+    <h3>Apart from unions we have</h3>
+
+    <ul>
+      <li class="">Intersections</li>
+      <li class="fragment fade-up">Projection</li>
+    </ul>
   </section>
-
-  <section>
-    <h3>Type - Record</h3>
-
-    <pre><code class="language-typescript">
-const x: {} = { test: 44 };
-x["test"]; // fails - element has an any type
-    </code></pre>
-  </section>
-
-  <section>
-
-    <h3>Solution</h3>
-    <pre><code class="language-tsx" data-line-numbers>const x: Record&lt;string, number&gt; = { test: 44 }
-const numeric = x["test"] // works, numeric has type number
-      </code></pre>
-  </section>
-
 </section>
 
 <section>
@@ -215,17 +253,17 @@ const ammoMap = ammoType.reduce((acc, cv) =&gt; {
   <section>
 
     <h3>When data comes from untrusted source - use type guard</h3>
-    <pre><code class="language-typescript">
-    const maybeUser = JSON.parse({ 'userName': 1 });
+    <pre><code class="language-typescript" data-line-numbers="">const maybeUser = JSON.parse({ 'userName': 1 });
     
-    const isUser = (value: any): value is { userName: string } => 
-    typeof value === 'object' && typeof value.userName === 'string'
-    
-    if (isUser(maybeUser)) {
-      console.log(maybeUser.userName)
-    } else { 
-      throw new Error(`Don't fool me!`);
-    }
+const isUser = (value: any): value is { userName: string } => 
+  typeof value === 'object' && 
+  typeof value.userName === 'string'
+
+if (isUser(maybeUser)) {
+  console.log(maybeUser.userName)
+} else { 
+  throw new Error(`Don't fool me!`);
+}
   </code></pre>
   </section>
 
@@ -234,9 +272,69 @@ const ammoMap = ammoType.reduce((acc, cv) =&gt; {
   </section>
 </section>
 
+
+<section>
+
+  <section>
+    <h3>Utilities</h3>
+    <p class="left">TypeScript has bunch of utility types that helps you with development</p>
+  </section>
+
+  <section>
+    <h3>Optional properties - ?</h3>
+
+    <pre><code data-line-numbers="" class="language-typescript">type Hero = {name: string, brain?: boolean}</code></pre>
+  </section>
+
+  <!-- <section>
+    <h3>Optional and Required types</h3>
+    <pre><code class="language-tsx" data-line-numbers>type Developer = { name: string; stack: string };
+
+type PartialDeveloper = Partial&lt;Developer&gt;;
+const pd: PartialDeveloper = {};
+
+type RequiredDeveloper = Required&lt;PartialDeveloper&gt;;
+const rd: RequiredDeveloper = {
+  name: 'Igor',
+  stack: 'React',
+};
+      </code></pre>
+  </section> -->
+
+  <section>
+    <h3>Typeof keyword</h3>
+
+    <pre><code class="language-tsx" data-line-numbers>const developer = {
+  name: 'Igor',
+  stack: 'React',
+};
+
+type PartialDeveloper = Partial&lt;typeof rd&gt;;
+    </code></pre>
+  </section>
+
+  <section>
+    <h3>Record</h3>
+
+    <pre><code class="language-typescript">
+const x: {} = { test: 44 };
+x["test"]; // fails - element has an any type
+    </code></pre>
+  </section>
+
+  <section>
+
+    <h3>Solution</h3>
+    <pre><code class="language-tsx" data-line-numbers>const x: Record&lt;string, number&gt; = { test: 44 }
+const numeric = x["test"] // works, numeric has type number
+      </code></pre>
+  </section>
+</section>
+
+
 <section>
   <h3>Important notice</h3>
 
-  <p>TypeScript doesn't exists in runtime, it's converted to pure JS</p>
-  <p>However, enums and TypeGuard will work</p>
+  <p class="left">TypeScript doesn't exists in runtime, it's converted to pure JS</p>
+  <p class="left fragment fade-up">However, enums and TypeGuard will work</p>
 </section>
