--- a/presentations/typescript-intro/body.html
+++ b/presentations/typescript-intro/body.html
@@ -9,13 +9,21 @@
 
 
   <section>
-    <h3>The great thing about TypeScript - it's progressive</h3>
+    <h3>The good part of TypeScript - it's progressive</h3>
 
     <p class="left">
       With tsconfig.json you can have TypeScript whatever strict you want
     </p>
 
     <p class="left">TypeScript also able to run JavaScript which enables taking benefits from both</p>
+  </section>
+
+  <section>
+    <h3>The bad parts of TypeScript</h3>
+
+    <p class="left">
+      Errors in TypeScript are absolutely awful, especially with complex types
+    </p>
   </section>
 
 </section>
@@ -48,9 +56,11 @@
   <section>
     <h3>Primitives - example</h3>
 
-    <pre><code data-line-numbers>const userName:string = 'Olena';
+    <pre><code data-line-numbers="1-4|1|2|3|4">const userName:string = 'Olena';
 const userAge:number = 25;
-const isUserAdmin:boolean = true;  </code></pre>
+const isUserAdmin:boolean = true; 
+const now: Date = new Date();
+ </code></pre>
   </section>
 
   <section>
@@ -89,7 +99,7 @@ sum('4', 5);
   <section>
     <h3>Typing a function - very and very common approach</h3>
 
-    <pre><code class="language-tsx" data-line-numbers>const AppHeader = (props: { txt: string }) =&gt; 
+    <pre><code class="language-tsx" data-line-numbers="1-2|1">const AppHeader = (props: { txt: string }) =&gt; 
   &lt;h1&gt;{props.txt}&lt;/h1&gt;;
     </code></pre>
   </section>
@@ -111,7 +121,7 @@ sum('4', 5);
   <section>
     <h3>Using keyword type</h3>
 
-    <pre><code class="language-typescript" data-line-numbers="">type User = { name: string, isAdmin: boolean; }
+    <pre><code class="language-typescript" data-line-numbers="1-2|1|2">type User = { name: string, isAdmin: boolean; }
 const user: User = { name: 'Vitalii', isAdmin: false }
     </code></pre>
   </section>
@@ -119,7 +129,7 @@ const user: User = { name: 'Vitalii', isAdmin: false }
   <section>
     <h3>Using keyword interface</h3>
 
-    <pre><code class="language-typescript" data-line-numbers="">interface IUser { name: string, isAdmin: boolean; }
+    <pre><code class="language-typescript" data-line-numbers="1-2|1|2">interface IUser { name: string, isAdmin: boolean; }
 const user: IUser = {name: 'Pavlo', isAdmin: true}
     </code></pre>
   </section>
@@ -132,7 +142,7 @@ const user: IUser = {name: 'Pavlo', isAdmin: true}
 
   <section>
     <h3>Functions</h3>
-    <pre><code class="language-typescript" data-line-numbers="">type ListUsers = (users: User[]) => void;
+    <pre><code class="language-typescript" data-line-numbers="1-5|1|2|4">type ListUsers = (users: User[]) => void;
 interface IListUsers { (users: User[]) => void }
 
 const listUsers: ListUsers = (users) => 
@@ -143,7 +153,7 @@ const listUsers: ListUsers = (users) =>
   <section>
     <h3>Component props - the great example </h3>
 
-    <pre><code class="language-tsx" data-line-numbers>type HeaderProps = { txt: string };
+    <pre><code class="language-tsx" data-line-numbers="1-3|1|2">type HeaderProps = { txt: string };
 const AppHeader = (props: HeaderProps) =&gt; 
   &lt;h1&gt;{props.txt}&lt;/h1&gt;;
 </code></pre>
@@ -161,7 +171,7 @@ const AppHeader = (props: HeaderProps) =&gt;
   </section>
   <section>
     <h3>Generic types</h3>
-    <pre><code class="language-tsx" data-line-numbers>type Action&lt;T&gt; = { type: string; payload: T };
+    <pre><code class="language-tsx" data-line-numbers="1-5|1|2|4">type Action&lt;T&gt; = { type: string; payload: T };
 const incrementAction: Action&lt;number&gt; = { 
   type: 'INCREMENT', 
   payload: 5 
@@ -178,7 +188,7 @@ const incrementAction: Action&lt;number&gt; = {
 
   <section>
     <h3>Simple example from React world</h3>
-    <pre><code class="language-tsx" data-line-numbers>type HeaderProps = PropsWithChildren&lt;{ customClass: string }&gt;;
+    <pre><code class="language-tsx" data-line-numbers="1-4|1|2">type HeaderProps = PropsWithChildren&lt;{ customClass: string }&gt;;
 const AppHeader = (p: HeaderProps) =&gt; (
   &lt;h1 className={p.customClass}&gt;{p.children}&lt;/h1&gt;
 );</code></pre>
@@ -207,9 +217,9 @@ const numericValue: StringOrNumber = 42;    </code></pre>
   </section>
 
   <section>
-    <h3>Union works with any type event primitives</h3>
+    <h3>Union works with any type, even with single word</h3>
 
-    <pre><code class="language-typescript" data-line-numbers="">type UserRole = 'admin' | 'user' |;
+    <pre><code class="language-typescript" data-line-numbers="">type UserRole = 'admin' | 'user';
 const userRole: UserRole = 'user';
 const wrongUserRole: UserRole = 'superAdmin'; // FAILS
     </code></pre>
